day-1 pre-lunch update

--- a/codes/day-1/js-app/index.html
+++ b/codes/day-1/js-app/index.html
@@ -55,7 +55,7 @@
     </h2> -->
     <h2> Home Page </h2>
     <br>
-    <div class="centerStyle fontStyle">
+    <div class="fontStyle">
         Click the button below
         <br>
         <!--  <button onclick="clicked()" style=" background-color: burlywood;
