--- a/codes/day-2/js-objects/index.html
+++ b/codes/day-2/js-objects/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task-2</title>
-    <script src="./source/employees.js"></script>
-    <script src="./source/index.js"></script>
+    <title>Objects</title>
+    <script src="./src/index.js"></script>
 </head>
 
 <body>
-    <h2>Array, Object and Callback</h2>
+    <h2>Objects in JS</h2>
 </body>
 
 </html>
