--- a/codes/day-1/js-task-two-array-object-callback/index.html
+++ b/codes/day-1/js-task-two-array-object-callback/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task-2</title>
-    <script src="./source/employees.js"></script>
+    <script src="./source/employee.js"></script>
+    <script src="./source/developer.js"></script>
+    <script src="./source/hr.js"></script>
     <script src="./source/index.js"></script>
 </head>
 
